<resources>
    <string name="app_name">Tìm Kiếm Việc Làm</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="signup">Đăng ký mới</string>
    <string name="forget_pass">Quên mật khẩu</string>
    <string name="sign_up">Đăng Ký Tài Khoản</string>
    <string name="user">Người dùng</string>
    <string name="admins">Nhà tuyển dụng</string>
    <string name="sdt">SDT:</string>
    <string name="nu">Nữ</string>
    <string name="nam">Nam</string>
    <string name="gioi_tinh">Giới tính:</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="pass">Mật khẩu:</string>
    <string name="email">E-mail: </string>
    <string name="ten_dang_nhap">Tên đăng nhập:</string>
    <string name="name">Họ tên:</string>
    <string name="ten_doanh_nghiep">Tên doanh nghiệp:</string>
    <string name="nhap_email">Nhập E-mail</string>
    <string name="send">Gửi</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="noi_dung_cong_viec">Nội dung công việc</string>
    <string name="input_email_register">Nhập Email Đăng Ký</string>
    <string name="input_pass">Nhập Mật Khẩu</string>
    <string name="note_register">Vui lòng đăng ký với email mà bạn sử dụng để xác nhận và tránh các sự cố về tài khoản!</string>
    <string name="backtologin">Quay Lại</string>
    <string name="register_account">Đăng Ký Tài Khoản</string>
    <string name="lostpass">Mất Mật Khẩu?</string>
    <string name="input_email">Nhập Email</string>
    <string name="login_title">Đăng Nhập</string>
    <string name="fblogin">Đăng Nhập FaceBook</string>
    <string name="register_new">Đăng Ký Mới</string>
    <string name="verifiation">Truy cập Email để xác thực tài khoản</string>
    <string name="email_error">Email không đúng định dạng!</string>
    <string name="pass_erro">Mật khẩu quá ngắn!</string>
    <string name="title">Tìm Kiếm Công Việc Mơ Ước</string>
    <string name="title2">Nâng Bước Thành Công</string>
    <string name="chucdanh">Nhập chức danh, vị trí... </string>
    <string name="nganhnghe">Tất cả ngành nghề </string>
    <string name="diadiem">Địa Điểm </string>
    <string name="timkiem">Tìm Kiếm </string>
    <string name="msg_login_success">Đăng nhập thành công!</string>
    <string name="CapNhatHscn">CẬP NHẬT HỒ SƠ CÁ NHÂN</string>
    <string name="hscn">HỒ SƠ CÁ NHÂN</string>
    <string name="upload_hscn">Upload</string>
    <string name="choose">Choose</string>
    <string name="facebook_app_id">699802623773698</string>
    <string name="fb_login_protocol_scheme">fb699802623773698</string>
    <string name="doi_mat_khau">Đổi Mật Khẩu</string>
    <string name="pass_old">Pass Old</string>
    <string name="passnew">PassNew</string>
    <string name="re_passnew">Re-PassNew</string>
    <string name="submit">submit</string>


    <string-array name="TenViecLam">
        <item>An Ninh / Bảo Vệ</item>
        <item>An toàn lao động </item>
        <item>Bán hàng / Kinh doanh </item>
        <item>Bán lẻ / Bán sỉ </item>
        <item>Bảo hiểm </item>
        <item>Bất động sản</item>
        <item>Bien phiên dịch</item>
        <item>Bưu chính viễn thông</item>
        <item>Chăn nuôi / Thú y</item>
        <item>Chứng khoán</item>
        <item>CNTT - Phần cứng / Mạng</item>
        <item>CNTT - Phần mềm</item>
        <item>Công nghệ sinh học</item>
        <item>Công nghệ thực phẩm / Dinh dưỡng</item>
        <item>Cơ khí / Ô tô / Tự động hóa</item>
        <item>Dầu khí</item>
        <item>Dệt may / Da giày / Thời trang</item>
        <item>Dịch vụ khách hàng</item>
        <item>Du lịch</item>
        <item>Dượcc phẩm</item>
        <item>Điện / Điện tử / Điện lạnh</item>
        <item>Đồ gỗ</item>
        <item>Giải trí</item>
        <item>Giáo dục / Đào tạo</item>
        <item>Hàng gia dụng / Chăm sóc cá nhân</item>
        <item>Hàng hải</item>
        <item>Hàng không</item>
        <item>Sinh Viên / Mới tốt nghiệp / Thực tập</item>
    </string-array>

    <string-array name="KeyTenViecLam">


        <item>51</item>
        <item>58</item>
        <item>31</item>
        <item>30</item>
        <item>23</item>
        <item>28</item>
        <item>38</item>
        <item>32</item>
        <item>52</item>
        <item>46</item>
        <item>63</item>
        <item>1</item>
        <item>69</item>
        <item>70</item>
        <item>14</item>
        <item>26</item>
        <item>39</item>
        <item>12</item>
        <item>34</item>
        <item>7</item>
        <item>48</item>
        <item>35</item>
        <item>15</item>
        <item>13</item>
        <item>10</item>
        <item>61</item>
        <item>60</item>
        <item>45</item>
    </string-array>

    <string-array name="TenThanhPho">
        <item>Toàn quốc</item>
        <item>Hà Nội</item>
        <item>Hồ Chí Minh</item>
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bạc Liêu</item>
        <item>Bắc Cạn</item>
        <item>Bắc Giang</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Dương</item>
        <item>Bình Định</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cao Bằng</item>
        <item>Cần Thơ</item>
        <item>Dak Lak</item>
        <item>Dak Nông</item>
        <item>Đà Nẵng</item>
        <item>Điện Biên</item>
        <item>Đồng Bằng Sông Cửu Long</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
    </string-array>

    <string-array name="KeyThanhPho">
        <item>1065</item>
        <item>4</item>
        <item>8</item>
        <item>76</item>
        <item>64</item>
        <item>781</item>
        <item>281</item>
        <item>240</item>
        <item>241</item>
        <item>75</item>
        <item>650</item>
        <item>56</item>
        <item>651</item>
        <item>62</item>
        <item>78</item>
        <item>26</item>
        <item>71</item>
        <item>50</item>
        <item>1042</item>
        <item>511</item>
        <item>900</item>
        <item>1064</item>
        <item>61</item>
        <item>67</item>
        <item>59</item>
        <item>19</item>
        <item>351</item>


    </string-array>
</resources>
