<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/tvHSCN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hscn"
        android:textSize="35sp"
        android:textStyle="bold"/>
    <ImageButton
        android:id="@+id/imgHSCN"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtHoTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/dia_chi"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtDiachi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/gioi_tinh"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radioGroup_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdbNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nam" />

            <RadioButton
                android:id="@+id/rdbNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/sdt"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upload_hscn" />
</LinearLayout>